--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ name = "bench6"
 
 [dependencies]
 itertools = "*"
+num = "0.2.0"
 
 [dev-dependencies]
 criterion = "0.3"
+[profile.release]
+lto = true
